--- a/src/styles/mainContent.css
+++ b/src/styles/mainContent.css
@@ -14,17 +14,40 @@
 
 .inputCityName {
   padding: 10px;
-  width: 75vw;
-  padding: 10px -10px;
   font-size: 20px;
 }
 
 .iconSearch {
-  background-color: transparent;
-  margin: 3px 0 0 -40px;
+  background-color: white;
+  margin: 3px 0 0 0px;
   border: none;
   padding: 10px;
   width: 10vw;
   position: relative;
   font-size: 20px;
+}
+
+@media (min-width: 600px) {
+  .title-page {
+    text-align: center;
+    font-size: 60px;
+  }
+
+  .inputCityName {
+    width: 50vw;
+    border: none;
+  }
+
+  .inputCityName:focus {
+    outline: none;
+  }
+
+  .iconSearch {
+    margin: 3px 0 0 0px;
+    background-color: white;
+  }
+
+  .iconSearch:hover {
+    cursor: pointer;
+  }
 }
